# RAG_API_Promtior

./: .gitignore  README.md  env_example  pyproject.toml
app/: chain.py  server.py
backend/: .env.example  Dockerfile  app.py  requirements.txt
doc/: README.md
